--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "fetch-blob": "^4.0.0",
     "pg": "^8.11.5"
   },
   "devDependencies": {
